--- a/_includes/post_list.html
+++ b/_includes/post_list.html
@@ -1,20 +1,20 @@
 {%- if site.posts.size > 0 -%}
-<h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-<ul class="post-list">
+<h1>{{ page.list_title | default: "Posts" }}</h1>
+<div class="col spaced">
   {%- for post in site.posts -%}
-  <li>
+  <a class="simple-card borderless" href="{{ post.url | relative_url }}">
     {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
     <span class="post-meta">{{ post.date | date: date_format }}</span>
-    <h3>
-      <a class="post-link" href="{{ post.url | relative_url }}">
-        {{ post.title | escape }}
-      </a>
-    </h3>
+    <h2>
+      {{ post.title | escape }}
+    </h2>
     {%- if site.show_excerpts -%}
-    {{ post.excerpt }}
+    <div class='fading-container'>
+      {{ post.excerpt }}
+    </div>
     {%- endif -%}
-  </li>
+  </a>
   {%- endfor -%}
-</ul>
+</div>
 <p class="rss-subscribe">subscribe <a href="{{ '/feed.xml' | relative_url }}">via RSS</a></p>
 {%- endif -%}
