--- a/_sass/chip.scss
+++ b/_sass/chip.scss
@@ -3,9 +3,8 @@
 .chip {
   text-align: center;
   font-size: smaller;
-  border: 1px solid $color-primary-dark;
-  border-radius: $spacing-double;
+  border-radius: $spacing;
   padding: $spacing-half;
-  background-color: $color-primary;
+  background-color: $color-primary-light;
   color: $color-text-dark;
 }
