--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,3 +1,5 @@
+@import 'dimens';
+
 .flex {
   display: flex;
 
@@ -37,4 +39,26 @@
     @extend .col;
     flex-direction: column-reverse;
   }
+}
+
+.width-half {
+  width: 50%;
+}
+
+.margin-auto {
+  margin: auto;
+}
+
+.preview-container {
+  overflow-y: hidden;
+  width: 100%;
+  height: 10rem;
+}
+
+.preview-img {
+  width: 100%;
+}
+
+.excerpt {
+  margin-top: $spacing-double;
 }
