Add cookie consent

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
 <footer class="site-footer h-card">
+  {% include cookie_consent.html %}
+
   <data class="u-url" href="{{ " /" | relative_url }}"></data>
 
   <div class="wrapper">
